--- a/src/Components/Landing/Latest/MovieLatest.sass
+++ b/src/Components/Landing/Latest/MovieLatest.sass
@@ -5,9 +5,11 @@
     max-height: 655px
     grid-gap: 2px
     justify-content: center
+    background-color: #000
     .latestGridChild
         position: relative
         overflow: hidden
+        cursor: pointer
         .gridChildBackground
             position: relative
             max-width: 100%
