--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,6 +2,10 @@
   width: 100%;
   padding: 0 212px;
   background-color: #0C2738;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 30;
 }
 
 .navWrapper .mainHeader {
