--- a/src/Components/Header/Header.sass
+++ b/src/Components/Header/Header.sass
@@ -2,6 +2,10 @@
     width: 100%
     padding: 0 212px
     background-color: #0C2738
+    position: sticky
+    top: 0
+    z-index: 30
+
     .mainHeader
         background-color: #0C2738
         display: flex
