--- a/src/Components/Landing/Highlights/Highlights.sass
+++ b/src/Components/Landing/Highlights/Highlights.sass
@@ -12,7 +12,7 @@
         justify-content: space-between
         width: 1075px
         margin: 0 auto
-        padding: 100px 0 55px 0
+        padding-top: 100px
         h1
             font-size: 50px
             line-height: 54px
@@ -49,6 +49,7 @@
         margin: 0 auto
         overflow: hidden
         margin-bottom: 130px
+        padding-top: 65px
         .moviecardsParent
             left: 0
             transition: all .5s ease-in-out
