--- a/src/Components/Landing/Highlights/Moviecard/Moviecard.css
+++ b/src/Components/Landing/Highlights/Moviecard/Moviecard.css
@@ -12,6 +12,27 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
+  max-height: 485px;
+}
+
+.movieCardWrapper span {
+  background-color: #F1B722;
+  width: 40px;
+  height: 30px;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 25px;
+  margin-bottom: 25px;
+  color: #f5f5f5;
+  z-index: 20;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .movieCardWrapper .movieCardIMGWrapper {
@@ -21,6 +42,18 @@
   -webkit-box-shadow: 0 0 10px #00000035;
           box-shadow: 0 0 10px #00000035;
   border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+}
+
+.movieCardWrapper .movieCardIMGWrapper .imgCover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -webkit-transform: all .3s ease-in-out;
+          transform: all .3s ease-in-out;
+  background: transparent;
+  z-index: 10;
 }
 
 .movieCardWrapper .movieCardIMGWrapper img {
@@ -30,10 +63,15 @@
      object-fit: cover;
 }
 
+.movieCardWrapper .movieCardIMGWrapper:hover .imgCover {
+  background: radial-gradient(circle, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+}
+
 .movieCardWrapper .cardWrapperInfo {
   margin-top: 35px;
   width: 100%;
   max-width: 255px;
+  height: 85px;
 }
 
 .movieCardWrapper .cardWrapperInfo #ratingStars p {
@@ -46,6 +84,11 @@
   font-weight: bold;
   font-size: 20px;
   line-height: 28px;
+  cursor: pointer;
+}
+
+.movieCardWrapper .cardWrapperInfo .cardWrapperTitle:hover {
+  text-decoration: underline;
 }
 
 .movieCardWrapper .cardWrapperInfo .genreWrapper {
@@ -58,6 +101,7 @@
   gap: 3.5px;
   color: #cad3da;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .movieCardWrapper .cardWrapperInfo .genreWrapper .genreTag {
