--- a/src/Components/Landing/Highlights/Moviecard/Moviecard.sass
+++ b/src/Components/Landing/Highlights/Moviecard/Moviecard.sass
@@ -3,20 +3,54 @@
     justify-content: center
     align-items: start
     flex-direction: column
+    position: relative
+    max-height: 485px
+    span
+        background-color: #F1B722
+        width: 40px
+        height: 30px
+
+        font-size: 14px
+        line-height: 32px
+        font-weight: bold
+
+        text-align: center
+        border-radius: 25px
+
+        margin-bottom: 25px
+        color: #f5f5f5
+        z-index: 20
+        position: absolute
+        top: 0%
+        left: 50%
+        transform: translate(-50%, -50%)
     .movieCardIMGWrapper
         width: 255px
         height: 365px
         overflow: hidden
         box-shadow: 0 0 10px #00000035
         border-radius: 5px
+        position: relative
+        cursor: pointer
+        .imgCover
+            width: 100%
+            height: 100%
+            position: absolute
+            transform: all .3s ease-in-out
+            background: transparent
+            z-index: 10
         img
             width: 100%
             height: 100%
             object-fit: cover
+    .movieCardIMGWrapper:hover
+        .imgCover
+            background: radial-gradient(circle, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%)
     .cardWrapperInfo
         margin-top: 35px
         width: 100%
         max-width: 255px
+        height: 85px
         #ratingStars
             p
                 display: inline-block !important
@@ -26,12 +60,16 @@
             font-weight: bold
             font-size: 20px
             line-height: 28px
+            cursor: pointer
+        .cardWrapperTitle:hover
+            text-decoration: underline
         .genreWrapper
             display: flex
             align-items: center
             gap: 3.5px
             color: #cad3da
             text-decoration: underline
+            cursor: pointer
             .genreTag
                 width: 20px
                 height: 17px
