--- a/src/Components/TVShows/TVAside/TVAside.css
+++ b/src/Components/TVShows/TVAside/TVAside.css
@@ -7,6 +7,7 @@
   background-color: #000;
   -webkit-box-shadow: 0px 0px 50px #000000b0;
           box-shadow: 0px 0px 50px #000000b0;
+  z-index: 20;
 }
 
 .tvAsideWrapper * {
