--- a/src/Components/TVShows/TVAside/TVAside.sass
+++ b/src/Components/TVShows/TVAside/TVAside.sass
@@ -5,6 +5,7 @@
     height: 100vh
     background-color: #000
     box-shadow: 0px 0px 50px #000000b0
+    z-index: 20
     *
         font-family: 'Catamaran', sans-serif
     .tvAsideInput
