seo + responsive / bugfix

--- a/src/Components/ByGenre/GenreMovieCard/GenreMovieCard.sass
+++ b/src/Components/ByGenre/GenreMovieCard/GenreMovieCard.sass
@@ -11,7 +11,7 @@
     .genreMovieCardWrapper
         display: flex
         justify-content: center
-        align-items: start
+        align-items: flex-start
         flex-direction: column
         position: relative
         max-height: 485px
