--- a/src/Views/Featured/FeaturedView.css
+++ b/src/Views/Featured/FeaturedView.css
@@ -9,16 +9,34 @@
   text-align: center;
   font-family: "Catamaran", sans-serif !important;
 }
+@media screen and (max-width: 1105px) {
+  .featuredViewWrapper .featuredCardsHeader {
+    max-width: 1075px;
+    width: unset;
+  }
+}
 .featuredViewWrapper .featuredCardsHeader h1 {
   font-size: 100px;
   font-weight: 900;
   line-height: 100px;
   color: #f5f5f5;
 }
+@media screen and (max-width: 1105px) {
+  .featuredViewWrapper .featuredCardsHeader h1 {
+    font-size: 9.05vw !important;
+    line-height: 9.05vw !important;
+  }
+}
 .featuredViewWrapper .featuredCardsHeader p {
   font-size: 24px;
   color: #8ea9bd;
   line-height: 28px;
+}
+@media screen and (max-width: 1105px) {
+  .featuredViewWrapper .featuredCardsHeader p {
+    font-size: 2.172vw !important;
+    line-height: 2.534vw !important;
+  }
 }
 .featuredViewWrapper .featuredCardsGrid {
   display: grid;
@@ -32,4 +50,22 @@
 }
 .featuredViewWrapper .featuredCardsGrid * {
   font-family: "Catamaran", sans-serif !important;
+}
+
+.featuredViewCol:nth-child(1) {
+  width: 80%;
+}
+@media screen and (max-width: 1395px) {
+  .featuredViewCol:nth-child(1) {
+    width: 100%;
+  }
+}
+
+.featuredViewCol:nth-child(2) {
+  width: 20%;
+}
+@media screen and (max-width: 1395px) {
+  .featuredViewCol:nth-child(2) {
+    display: none;
+  }
 }/*# sourceMappingURL=FeaturedView.css.map */
