--- a/src/Components/ByGenre/GenreMovieCard/GenreMovieCard.css
+++ b/src/Components/ByGenre/GenreMovieCard/GenreMovieCard.css
@@ -14,7 +14,7 @@
 .genreMovieWrapper .genreMovieCardWrapper {
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   position: relative;
   max-height: 485px;
