--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -75,4 +75,11 @@
   .navWrapper .mainHeader .headerLogo {
     margin: 10px 0 15px 0;
   }
+}
+@media screen and (max-width: 325px) {
+  .navWrapper .mainHeader .headerLogo {
+    width: 58.462vw;
+    height: 6.154vw;
+    margin-right: 10px;
+  }
 }/*# sourceMappingURL=Header.css.map */
