--- a/src/Components/Header/Header.sass
+++ b/src/Components/Header/Header.sass
@@ -14,7 +14,6 @@
         justify-content: space-between
         align-items: center
         padding: 0 60px
-
         @media screen and (max-width: 1280px)
             flex-direction: column
             padding: 20px 60px
@@ -50,3 +49,7 @@
             height: 20px
             @media screen and (max-width: 1280px)
                 margin: 10px 0 15px 0
+            @media screen and ( max-width: 325px )
+                width: 58.462vw
+                height: 6.154vw
+                margin-right: 10px
