--- a/src/Components/Landing/Highlights/Highlights.sass
+++ b/src/Components/Landing/Highlights/Highlights.sass
@@ -44,15 +44,21 @@
             margin: 0 7.5px
             cursor: pointer
             transition: color .2s ease-in-out
+            @media screen and ( max-width: 285px )
+                width: 140px
             &.active
                 color: #374550
                 background-color: #f5f5f5
-                @media screen and ( max-width: 450px )
-                    margin-top: 15px
             &.active:hover
                 color: #333
         button:hover
             color: #f5f5f5
+        button:nth-child(3)
+            @media screen and ( max-width: 440px )
+                margin-top: 10px
+        button:nth-child(2)
+            @media screen and ( max-width: 285px )
+                margin-top: 10px
     .moviecardsParentWrapper
         position: relative
         height: 615px
