--- a/src/Components/Landing/Highlights/Moviecard/Moviecard.css
+++ b/src/Components/Landing/Highlights/Moviecard/Moviecard.css
@@ -32,6 +32,12 @@
   position: relative;
   cursor: pointer;
 }
+@media screen and (max-width: 565px) {
+  .movieCardWrapper .movieCardIMGWrapper {
+    width: 79.646vw !important;
+    height: 34.513vw !important;
+  }
+}
 .movieCardWrapper .movieCardIMGWrapper .imgCover {
   width: 100%;
   height: 100%;
@@ -54,6 +60,11 @@
   width: 100%;
   max-width: 255px;
   height: 85px;
+}
+@media screen and (max-width: 565px) {
+  .movieCardWrapper .cardWrapperInfo {
+    margin-top: 2.195vw;
+  }
 }
 .movieCardWrapper .cardWrapperInfo #ratingStars p {
   display: inline-block !important;
