--- a/src/Components/Landing/Highlights/Moviecard/Moviecard.sass
+++ b/src/Components/Landing/Highlights/Moviecard/Moviecard.sass
@@ -32,6 +32,9 @@
         border-radius: 5px
         position: relative
         cursor: pointer
+        @media screen and ( max-width: 565px )
+            width: 79.646vw !important
+            height: 34.513vw !important
         .imgCover
             width: 100%
             height: 100%
@@ -51,6 +54,8 @@
         width: 100%
         max-width: 255px
         height: 85px
+        @media screen and ( max-width: 565px )
+            margin-top: 2.195vw
         #ratingStars
             p
                 display: inline-block !important
