--- a/src/Components/TVShows/TVAside/TVAside.css
+++ b/src/Components/TVShows/TVAside/TVAside.css
@@ -1,12 +1,12 @@
 .tvAsideWrapper {
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
   right: 0;
   height: 100vh;
   background-color: #000;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.6901960784);
   z-index: 20;
+  width: 20%;
 }
 .tvAsideWrapper * {
   font-family: "Catamaran", sans-serif;
