--- a/src/Views/Detailed/DetailedMovieComps/DetailedMovieHero/DetailedMovieHero.sass
+++ b/src/Views/Detailed/DetailedMovieComps/DetailedMovieHero/DetailedMovieHero.sass
@@ -25,7 +25,7 @@
         .rating
             position: absolute
             top: -10%
-            left: -4.5%
+            left: -2.5%
             width: 100px
             height: 100px
             background-color: #f1b722
@@ -40,9 +40,10 @@
             font-weight: 700
             color: #f5f5f5
             @media screen and ( max-width: 1245px )
-                transform: translateX(-50%)
+                transform: translate(-50%, -50%)
                 left: 50%
-                top: 35%
+                top: 50%
+            @media screen and ( max-width: 925px )
         .movieHeroIMGWrapper
             min-width: 340px
             max-width: 340px
