--- a/src/Views/Featured/FeaturedView.sass
+++ b/src/Views/Featured/FeaturedView.sass
@@ -7,15 +7,24 @@
         margin: 0 auto
         text-align: center
         font-family: 'Catamaran', sans-serif !important
+        @media screen and ( max-width: 1105px )
+            max-width: 1075px
+            width: unset
         h1
             font-size: 100px
             font-weight: 900
             line-height: 100px
             color: #f5f5f5
+            @media screen and ( max-width: 1105px )
+                font-size: 9.050vw !important
+                line-height: 9.050vw !important
         p
             font-size: 24px
             color: #8ea9bd
             line-height: 28px
+            @media screen and ( max-width: 1105px )
+                font-size: 2.172vw !important
+                line-height: 2.534vw !important
     .featuredCardsGrid
         display: grid
         grid-template-columns: auto auto auto auto
@@ -26,3 +35,11 @@
         row-gap: 75px
         *
             font-family: 'Catamaran', sans-serif !important
+.featuredViewCol:nth-child(1)
+    width: 80%
+    @media screen and ( max-width: 1395px )
+        width: 100%
+.featuredViewCol:nth-child(2)
+    width: 20%
+    @media screen and ( max-width: 1395px )
+        display: none
