--- a/src/Components/ByGenre/ByGenreHeader/GenreMoviesHeader.css
+++ b/src/Components/ByGenre/ByGenreHeader/GenreMoviesHeader.css
@@ -2,7 +2,14 @@
   width: 1080px;
   margin: 0 auto;
   text-align: center;
-  padding: 75px 0 75px 0;
+  padding: 75px 0;
+}
+@media screen and (max-width: 1160px) {
+  .genreMoviesHeader {
+    width: unset;
+    max-width: 1080px;
+    padding: 6.466vw 0;
+  }
 }
 .genreMoviesHeader * {
   font-family: "Catamaran", sans-serif;
@@ -13,10 +20,23 @@
   font-weight: 900;
   color: #f5f5f5;
 }
+@media screen and (max-width: 485px) {
+  .genreMoviesHeader h1 {
+    font-size: 10.309vw;
+    line-height: 11.134vw;
+  }
+}
 .genreMoviesHeader p {
   font-weight: 300;
   font-size: 24px;
   line-height: 28px;
   color: #8ea9bd;
   margin-top: 25px;
+}
+@media screen and (max-width: 485px) {
+  .genreMoviesHeader p {
+    font-size: 4.948vw;
+    line-height: 5.773vw;
+    margin-top: 5.155vw;
+  }
 }/*# sourceMappingURL=GenreMoviesHeader.css.map */
